2008-08-25  Jorge Gonzalez  <jorgegonz@svn.gnome.org>

	* include/languages/es.po: Updated Spanish translation.

	* include/languages/index.pot: Updated strings.

	* include/languages/es.mo: Updated Spanish translation.

	* godmode/reporting/graph_builder.php: Changed several hardcoded
	  striings to make them translatable.

2008-08-25  Esteban Sanchez  <estebans@artica.es>

	* images/help.png: Updated to a bigger image with more quality.

2008-08-24 Sancho Lerena  <slerena@gmail.com>

	* include/functions_db.php: Fixed some warning messages
	due missing check before several foreachs.
	
	* index.php: Disabled development flag to detect config.

	* operation/agentes/networkmap.php: String too short for
	names, long IP address was being shortened.

	* operation/servers/view_server.php,
	operation/servers/view_server_detail.php
	godmode/servers/manage_recontask_form.php: Fixed some warnings
	and added proper message for empty screens.

	After this commit a beta1 package has been made.

2008-08-22 Sancho Lerena  <slerena@gmail.com>

	* Massive header update. We're now officially on Beta1.

2008-08-22 Sancho Lerena  <slerena@gmail.com>

	* pandoradb_data.sql: Removed data for locale, added for new 
	date string format.

	* include/functions_html.php: Deletion of table properties 
	after calling it makes a bad render on several pages that uses 
	some properties for other things (width).

	* include/functions_reporting.php: Added several checks to avoid
	notices.

	* include/config_process.php: Removed locale code. Added code for
	new datetime string format.

	* include/locale.class.php: Removed.

	* include/functions.php: pandora_help() was not returning correct output.
	Added format_datetime() function to render date / time strings in user
	defined format.

	* include/functions_db.php: Added check in get_monitors_down() to avoid
	notice in void foreach.

	* operation/incidents/incident_detail.php: Solved problem with attachments.
